--- a/app/src/main/res/layout/card_view_practice.xml
+++ b/app/src/main/res/layout/card_view_practice.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/size_100dp"
+    android:layout_height="wrap_content"
     android:layout_marginTop="8dp">
 
     <LinearLayout
@@ -49,7 +49,7 @@
                         android:maxLines="1"
                         android:text="Test your skillz"
                         android:textColor="@color/black"
-                        android:textSize="@dimen/_12sdp"
+                        android:textSize="@dimen/text_size_12sp"
                         android:textStyle="bold" />
 
                     <TextView
