--- a/app/src/main/res/layout/fragment_find_competitive.xml
+++ b/app/src/main/res/layout/fragment_find_competitive.xml
@@ -51,38 +51,38 @@
                 android:layout_below="@+id/topBar"/>
 
 
-<!--            <RelativeLayout-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_below="@id/barLayout"-->
-<!--                android:layout_marginTop="@dimen/size_20dp"-->
-<!--                android:layout_marginStart="5dp"-->
-<!--                android:padding="@dimen/size_10dp"-->
-<!--                android:layout_height="wrap_content">-->
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_below="@id/barLayout"
+                android:layout_marginTop="@dimen/size_20dp"
+                android:layout_marginStart="5dp"
+                android:padding="@dimen/size_10dp"
+                android:layout_height="wrap_content">
 
 
-<!--                <TextView-->
-<!--                    android:id="@+id/heading"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:fontFamily="@font/poppins_regular"-->
+                <TextView
+                    android:id="@+id/heading"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins_regular"
 
-<!--                    android:text="Request Countdown "-->
-<!--                    android:textColor="@color/white"-->
-<!--                    android:textSize="16sp"-->
-<!--                    android:textStyle="bold" />-->
+                    android:text="Request Countdown "
+                    android:textColor="@color/white"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
 
-<!--            <TextView-->
-<!--                android:id="@+id/countdown"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:text="00:00:00"-->
-<!--                android:layout_below="@id/heading"-->
-<!--                android:fontFamily="@font/poppins_regular"-->
-<!--                android:textColor="@color/white"-->
-<!--                android:textSize="25sp"-->
-<!--                android:textStyle="bold"-->
-<!--                />-->
-<!--            </RelativeLayout>-->
+            <TextView
+                android:id="@+id/countdown"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="00:00:00"
+                android:layout_below="@id/heading"
+                android:fontFamily="@font/poppins_regular"
+                android:textColor="@color/white"
+                android:textSize="25sp"
+                android:textStyle="bold"
+                />
+            </RelativeLayout>
 
 
             <LinearLayout
